# qwen-voice-input-system

./: .gitignore  INSTALL.md  NOTES.md  README.md
config/: config.json
contrib/fcitx5-qwen-voice/: CMakeLists.txt  README.md  install-user.sh  qwenvoicefcitx5.conf  qwenvoicefcitx5.cpp  restart-fcitx5.sh
docs/: qwen-voice-input-arch-niri.md  system-changes-summary-2026-05-12.html  system-changes-summary-2026-05-12.md
legacy/systemd/user/: eye-key-listener.service  qwen-voice-input.service
scripts/: key-listener.py  run.sh
src/: custom_key_daemon.py
systemd/user/: custom-key-daemon.service
tests/: test_custom_key_daemon.py
